--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>JYMICKHA MOONLIGHT</title>
+  <title>Jymickha Styvenley</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,7 +58,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>BENAHY HARITINA</h2>
-            <h1>JYMICKHA STYVENLEY</h1>
+            <h1>Jymickha Styvenley</h1>
             <p>I'm <span class="typed" data-typed-items="AFRO, MANNEQUIN, MODÈLE PHOTO, TOP MODÈLE">AFRO</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><i class="bi bi-facebook"></i></a>
@@ -78,7 +78,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>ABOUT</h2>
-        <p>Je m'appelle Benahy Haritina Jymickha Styvenley, un mélange riche de cultures et de traditions. Du côté de ma mère, je viens des fiers Tsimihety de Mandritsara, et de mon père, je porte les racines d'Antanosy de Fort Dauphin. Depuis aussi loin que je me souvienne, mes cheveux naturels ont toujours été ma signature, mon lien avec mes origines.</p>
+        <p>Je m'appelle BENAHY HARITINA Jymickha Styvenley, un mélange riche de cultures et de traditions. Du côté de ma mère, je viens des fiers Tsimihety de Mandritsara, et de mon père, je porte les racines d'Antanosy de Fort Dauphin. Depuis aussi loin que je me souvienne, mes cheveux naturels ont toujours été ma signature, mon lien avec mes origines.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -96,7 +96,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>23 Avril 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>jymickha.moonlight.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>jymickha-styvenley.netlify.app</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+261 37 76 132 87</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Antananarivo, MADAGASCAR</span></li>
                 </ul>
